--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-icons/all-files": "^4.1.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "daisyui": "^4.12.12",
